# openenv-soc

./: .gitignore  Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_env.py  test_http.py
server/: __init__.py  app.py  environment.py  mock_network.py
soc_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
