[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "soc-env"
version = "1.0.0"
description = "OpenEnv-SOC: Autonomous Security Operations Center Analyst Environment"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "openai>=1.30.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
openenv-soc-server = "server.app:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]
where = ["."]
include = ["soc_env*", "server*"]
